packages/typ/tests/fixtures/diagnostics/0184_adt_record_update_bool_field_06.ml.expected
File "0184_adt_record_update_bool_field_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0184_adt_record_update_bool_field_06 is not a valid module name.

File "0184_adt_record_update_bool_field_06.ml", line 3, characters 33-34:
3 | let _ = { base_zeta with ready = 6 }
                                     ^
Error: The constant 6 has type int but an expression was expected of type
         bool
